--- a/yes.html
+++ b/yes.html
@@ -15,7 +15,7 @@
         />
       </div>
       <button class="btn" id="yesButton" onclick="nextPage()">
-        Let's Fix a Date
+        I love you too 😘😘
       </button>
     </div>
   </body>
