--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
   </head>
   <body>
     <div class="container">
-      <div>
+      <!-- <div>
         <h1 class="header_text">Do you Love me?</h1>
+      </div> -->
+      <div>
+        <h1 class="header_text">Wanna play chess with me?</h1>
       </div>
       <!-- <p>
         <a href="https://www.instagram.com/untoldcoding/">@untoldcoding</a>
       </p> -->
       <div class="gif_container">
         <img
-          src="https://i.postimg.cc/pdNqPxx1/milk-and-mocha-cute.gif"
+          src="https://media.tenor.com/AQCXPjZ-o1oAAAAi/penguin-check.gif"
           alt="Cute animated illustration"
         />
       </div>
