--- a/yes.html
+++ b/yes.html
@@ -14,8 +14,11 @@
           alt="Cute animated illustration"
         />
       </div>
-      <button class="btn" id="yesButton" onclick="nextPage()">
+      <!-- <button class="btn" id="yesButton" onclick="nextPage()">
         I love you too 😘😘
+      </button> -->
+      <button class="btn" id="yesButton" onclick="nextPage()">
+        Send me the Request 😍😍
       </button>
     </div>
   </body>
