--- a/yes.html
+++ b/yes.html
@@ -17,9 +17,11 @@
       <!-- <button class="btn" id="yesButton" onclick="nextPage()">
         I love you too 😘😘
       </button> -->
+      <a href="https://www.chess.com/">
       <button class="btn" id="yesButton" onclick="nextPage()">
-        Send me the Request 😍😍
+        Send me the Request 😍😍(Click here)
       </button>
+      </a>
     </div>
   </body>
 </html>
