--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <h1 class="header_text">Do you Love me?</h1>
       </div> -->
       <div>
-        <h1 class="header_text">Wanna play chess with me?</h1>
+        <h1 class="header_text">Will you be my valentine?</h1>
       </div>
       <!-- <p>
         <a href="https://www.instagram.com/untoldcoding/">@untoldcoding</a>
       </p> -->
       <div class="gif_container">
         <img
-          src="https://media.tenor.com/AQCXPjZ-o1oAAAAi/penguin-check.gif"
+          src="https://giphy.com/gifs/love-pokemon-pretty-vDhDcIEmShbUI"
           alt="Cute animated illustration"
         />
       </div>
