--- a/yes.html
+++ b/yes.html
@@ -17,9 +17,9 @@
       <!-- <button class="btn" id="yesButton" onclick="nextPage()">
         I love you too 😘😘
       </button> -->
-      <a href="https://www.chess.com/">
+      <a href="">
       <button class="btn" id="yesButton" onclick="nextPage()">
-        Send me the Request 😍😍(Click here)
+        😍😍
       </button>
       </a>
     </div>
