--- a/yes.html
+++ b/yes.html
@@ -19,7 +19,7 @@
       </button> -->
       <a href="">
       <button class="btn" id="yesButton" onclick="nextPage()">
-        😍😍
+        I love you 😘
       </button>
       </a>
     </div>
