--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </p> -->
       <div class="gif_container">
         <img
-          src="https://giphy.com/gifs/rvappstudios-valentine-valentines-day-9b4tZ8IjVAIiLLisSG"
+          src="https://media.tenor.com/C-5-bJzwiQwAAAAM/roses-flowers.gif"
           alt="Cute animated illustration"
         />
       </div>
